# Euler

./: .gitignore  README.md  build-native.sh  package-temp.json  package.json  test-startup.sh  tsconfig.json
bench/: README.md  container-agent.ts  docker-runner.ts  drivers.ts  harness.ts  repair-triage.ts  results-deepseek-chat-tb2-full8.json  results-deepseek-v4-flash-9tasks.json  results-deepseek-v4-flash-tb2-easy.json  results-deepseek-v4-flash-tb2-medium.json  results-deepseek-v4-flash.json  results-deepseek-v4-pro.json  run.ts  sdk.ts  test-grounding.ts
bench/tasks/count-log-lines/: access_log  task.yaml
bench/tasks/count-log-lines/tests/: test_outputs.py
bench/tasks/empty_check/: task.json
bench/tasks/empty_check/repo_template/: strings.py  test_strings.py
bench/tasks/list_index/: task.json
bench/tasks/list_index/repo_template/: listops.py  test_listops.py
bench/tasks/off_by_one/: task.json
bench/tasks/off_by_one/repo_template/: calc.py  test_calc.py
bench/tasks/sanitize-git-repo/tests/: test_outputs.py
bench/tasks/string_reverse/: task.json
bench/tasks/string_reverse/repo_template/: strutils.py  test_strutils.py
bench/tasks/tb_largest/: task.json
bench/tasks/tb_largest/repo_template/: nums.txt
bench/tasks/tb_wordcount/: task.json
bench/tasks/terminal_ls/: task.json
native/: Cargo.toml
native/bitmap-fonts/: Cargo.toml
native/bitmap-fonts/src/: lib.rs
native/clipboard-native/: Cargo.toml
native/clipboard-native/src/: lib.rs
native/euler-debug/: Cargo.toml  README.md
native/euler-debug/src/: adapter.rs  client.rs  lib.rs  main.rs  protocol.rs  rpc.rs
native/euler-debug/tests/: e2e.rs
native/euler-debug/tests/fixtures/: sample.py
native/euler-tui/: Cargo.toml
native/euler-tui/src/: app.rs  bridge.rs  main.rs  protocol.rs  ui.rs
native/fast-ops/: Cargo.toml
native/fast-ops/src/: lib.rs
native/kitty-protocol/: Cargo.toml
native/kitty-protocol/src/: lib.rs
native/pty-bridge/: Cargo.toml
native/pty-bridge/src/: lib.rs
native/ripgrep-lite/: Cargo.toml
native/ripgrep-lite/src/: lib.rs
native/snapcompact-wasm/: Cargo.toml
native/snapcompact-wasm/src/: lib.rs
src/: cli-commands.ts  cli.ts  cli.tsx  headless.ts  index.ts  test-agent.ts
src/agent/: index.ts
src/agent/agent/: context.ts  coordinator.ts  index.ts  types.ts
src/agent/bridge/: protocol.ts
src/agent/compaction/: index.ts  snapcompact.ts
src/agent/model/: coding-plan.ts  fallback-chain.ts  index.ts  provider-config.ts  provider-registry.ts  types.ts
src/agent/model/providers/: amazon-bedrock.ts  anthropic.ts  azure-openai.ts  cerebras.ts  cloudflare-ai-gateway.ts  cloudflare-workers-ai.ts  cohere.ts  cursor.ts  deepseek.ts  fireworks.ts  github-copilot.ts  google-vertex.ts  google.ts  groq.ts  huggingface.ts  index.ts  kimi-coding.ts  lmstudio.ts  minimax-cn.ts  minimax.ts  mistral.ts  ollama.ts  openai.ts  opencode-go.ts  opencode.ts  openrouter.ts  perplexity.ts  together.ts  vercel-ai-gateway.ts  vllm.ts  xai.ts  xiaomi-token-plan-ams.ts  xiaomi-token-plan-cn.ts  xiaomi-token-plan-sgp.ts  xiaomi.ts  zai.ts
src/agent/modes/: index.ts  plan-mode.ts
src/agent/prompts/: system-prompt.md
src/agent/tool/: bash.ts  edit.ts  eval.ts  find.ts  glob.ts  grep.ts  hashline.ts  index.ts  ls.ts  lsp.ts  read.ts  search.ts  specialist.ts  task.ts  types.ts  write.ts
src/agent/tools/: index.ts  registry.ts  types.ts
src/agent/tools/core/: bash.ts  discover-tool.ts  edit.ts  index.ts  read.ts  search.ts  write.ts
src/agent/tools/discoverable/: ast-edit.ts  debug.ts  eval.ts  find.ts  index.ts  lsp.ts  recipe.ts  task.ts  web-search.ts
src/agent/utils/: index.ts  logger.ts  types.ts
src/commands/: acp.ts  agents.ts  commit.ts  complete.ts  completions.ts  config.ts  grep.ts  launch.ts  plugin.ts  read.ts  setup.ts  shell.ts  ssh.ts  stats.ts  update.ts  web-search.ts  worktree.ts
src/config/: config.ts  index.ts
src/native/: benchmark.ts  bridge.ts  debug-bridge.ts  index.ts  optimizer.ts  snapcompact.ts
src/sessions/: index.ts  jsonl-storage.ts  manager.ts  sqlite-storage.ts  types.ts
src/skills/: index.ts
src/slash-commands/: comprehensive.ts  index.ts  registry.ts  types.ts
src/tui/: App.tsx  index.ts  types.ts
src/tui/components/: Card.tsx  ChatView.tsx  InputBox.tsx  ModelSelector.tsx  PermissionPrompt.tsx  Selector.tsx  StatusBar.tsx  index.ts
src/utils/: cli.ts  index.ts
test/fixtures/: mock-stream.ts
test/integration/: provider.test.ts
test/unit/: agent.test.ts  bridge-protocol.test.ts  conversation-manager.test.ts  coordinator-interrupt.test.ts  coordinator-parallel-tools.test.ts  coordinator-tool-loop.test.ts  json-arg-repair.test.ts  repair-triage.test.ts  specialist-tools.test.ts  test-grounding.test.ts  tools-comprehensive.test.ts  tools.test.ts
