[workspace]
members = [
    "bitmap-fonts",
    "ripgrep-lite",
    "pty-bridge",
    "clipboard-native",
    "kitty-protocol",
    "snapcompact-wasm",
    "fast-ops",
    "euler-debug",
    "euler-tui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Euler Agent"]

[workspace.dependencies]
# wasm-bindgen for WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Regular expressions
regex = "1.10"
regex-automata = "0.4"

# File system operations
walkdir = "2.4"

# PTY operations
portable-pty = "0.8"

[profile.release]
opt-level = "s"      # Optimize for size (the binary is a long-lived stdio server)
lto = true           # Link-time optimization across the whole crate graph
codegen-units = 1    # Better optimization at the cost of build time
strip = "symbols"    # Strip symbols from the binary (smaller, no debug info)
# Note: panic = "abort" is intentionally NOT set. We rely on `Drop` for
# `DebugClient` to tear down the adapter process tree via `kill_tree`; aborting
# on panic would skip `Drop` and orphan the adapter. Unwinding keeps cleanup
# reliable.

[profile.release.package."*"]
opt-level = 3   # Optimize dependencies for speed
