[package]
name = "euler-tui"
version.workspace = true
edition.workspace = true
description = "Industrial-grade ratatui terminal UI for the Euler agent. Drives the TypeScript agent over a stdio JSON bridge."

[[bin]]
name = "euler-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
unicode-width = "0.2"
futures = "0.3"

[features]
default = []

[lints.clippy]
# Match the euler-debug crate's discipline: pedantic as warnings, hard errors
# for anything that corrupts the protocol or indicates a real bug.
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
doc_markdown = "allow"
# TUI code legitimately uses unwrap/expect on infallible renders and known-good
# state; tests use it freely.
unwrap_used = "allow"
expect_used = "allow"
# Numeric casts at the terminal/rendering boundary are bounded by screen size.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Stray stdout would NOT corrupt our protocol (the TS subprocess owns its own
# stdio; we write to the terminal, not to a pipe) — but keep the rule as a
# reminder to log via the status bar or eprintln.
print_stdout = "warn"
print_stderr = "warn"
