[package]
name = "ripgrep-lite"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true, optional = true }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
