[package]
name = "snapcompact-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true, optional = true }
serde_json.workspace = true
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
anyhow.workspace = true
chrono = "0.4"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
